  to allow detection and usage of FastRAM (TT-RAM). (VRI)
- bdos/iumem.c bdos/mem.h bdos/proc.c bdosm/umem.c: Renamed has_ttram to
  has_alt_ram and pmdtt to pmdalt. (VRI)
- bdos/bdosmain.c bdos/iumem.c bdos/mem.h bdos/proc.c bdos/umem.c bios/acsi.c
  bios/bios.c bios/floppy.c bios/machine.c bios/machine.h include/config.h:
  Added the CONF_WITH_ALT_RAM define to allow disabling support for alternate
  RAM. (VRI)

2011-12-26
- *.S: Replaced .global by .globl. (VRI)
- bios/memory.S: Set 0xffff8007 even when compiling for Falcon MMU only. (VRI)
- bios/memory.S include/config.h: Added the CONF_WITH_ST_MMU define to allow
  disabling ST MMU support. (VRI)
- bios/memory.S: Allow FastRAM detection even without Falcon MMU. (VRI)
- bios/memory.S include/config.h: Added the CONF_FASTRAM_SIZE define to allow
  disabling autodetection of the FastRAM size. (VRI)
- bios/memory.S: Factorize ST-RAM setup. (VRI)
- bios/memory.S include/config.h: Added the CONF_STRAM_SIZE define to allow
  disabling autodetection of the ST-RAM size. (VRI)

2011-12-27
- bios/bios.c bios/dma.c bios/dma.h bios/mfp.c bios/mfp.h bios/xbios.c
  include/config.h: Added the CONF_WITH_MFP define to allow disabling MFP
  support. (VRI)
- bios/xbios.c: Fixed DBG_XBIOS. (VRI)
- bios/xbios.c bios/xbios.h: Removed obsolete xbiosinit(). (VRI)
- bios/xbios.c bios/xbios.h: Make all XBIOS functions extern. (VRI)
- bios/bios.c bios/xbios.c: Make debug wrappers static. (VRI)
- bios/bios.h: Added prototypes for misc BIOS functions. (VRI)

2011-12-28
- bios/screen.c bios/screen.h bios/vectors.S include/config.h: Added the
  CONF_WITH_SHIFTER define to allow disabling Shifter support. (VRI)
- bios/vectors.S: Added the DBG_CHECK_READ_BYTE define to allow tracing
  check_read_byte() calls. (VRI)
- bios/biosmem.c bios/screen.c include/config.h: Added the CONF_VRAM_ADDRESS
  define to use a fixed video ram area out of the ST-RAM. (VRI)
- include/config.h: Moved target specific defaults to a separate section. (VRI)