@@ -111,6 +111,9 @@
 # ifndef USE_STOP_INSN_TO_FREE_HOST_CPU
 #  define USE_STOP_INSN_TO_FREE_HOST_CPU 0 /* Good idea to disable ? */
 # endif
+# ifndef CONF_WITH_DESK1
+#  define CONF_WITH_DESK1 0 /* Sad but necessary to fit size requirements */
+# endif
 # ifndef CONF_WITH_DESKTOP_ICONS
 #  define CONF_WITH_DESKTOP_ICONS 0
 # endif
@@ -457,11 +460,15 @@
 #endif
 
 /*
- * Define DESK1 to use the modern PC-GEM v1.0 style desktop.
- * Undefine it to use the old desktop with 2 fixed windows.
+ * Define CONF_WITH_DESK1 to 1 to use the modern PC-GEM v1.0 style desktop.
+ * Define it to 0 to use the old desktop with 2 fixed windows.
  */
-#ifndef TARGET_192
-#define DESK1
+#ifndef CONF_WITH_DESK1
+# define CONF_WITH_DESK1 1
+#endif
+#if CONF_WITH_DESK1
+  /* The current EmuDesk sources test the presence of this define */
+# define DESK1
 #endif
 
 /*
